--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -18,7 +18,7 @@
 		<ul class="toplinks_links">
 			<li><a href="../../../index.html">Home</a></li>
 			<li><a href="../../../teaching.html">Teaching</a></li>
-			<li><a href="../../../CV.pdf">CV</a></li>
+			<li><a href="../../../CVAClifton.pdf">CV</a></li>
 			<li><a href="../../../studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
@@ -64,10 +64,11 @@
 				<p><li><a href="ProdQuotSols.pdf">Product and Quotient Rule Practice</a></li></p>
 				<p><li><a href="ChainRuleSols.pdf">Chain Rule Practice</a></li></p>
 				<p><li><a href="PracticeExam2Sols.pdf">Exam 2 Practice Problems</a></li></p>
-				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
+				<p><li><a href="Ch561to3Sols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
 				<p><li><a href="solarsols.pdf">Solar Energy and Riemann Sums Solutions</a></li></p>
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions by Hand</a></li></p>
 				<p><li><a href="uSubPracticeSols.pdf">Integration by Substitution Solutions</a></li></p>
+				<p><li><a href="PracticeExam3Sols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice (Second version)</a></li></p>
 				<!--<p><li><a href="BingoSols.pdf">Final Exam Bingo (Solutions - not in order!)</a></li></p>-->
 				
 			</div>
@@ -92,6 +93,7 @@
 				<p><li><a href="PracticeExam2.pdf">Exam 2 Practice Problems</a></li></p>
 				<p><li><a href="Ch561to3Practice.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
 				<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
+				<p><li><a href="PracticeExam3.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice (Second version)</a></li></p>
 			</div>
 		</div>
 
