--- a/courses/122/Summer18/Quizzes.html
+++ b/courses/122/Summer18/Quizzes.html
@@ -52,8 +52,8 @@
 	<div id="content" class="clearfix shadow">
 		<div id="trio1">
 			<div class="inner">
-				<h2>Blank Quizzes</h2>
-				<!--<p><li><a href="Quiz1.pdf">Quiz 2: Sections 1.1-1.3</a></li></p>
+				<!--<h2>Blank Quizzes</h2>
+				<p><li><a href="Quiz1.pdf">Quiz 2: Sections 1.1-1.3</a></li></p>
 				<p><li><a href="Quiz3.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
 				<p><li><a href="WrittenHW2.pdf">Take-Home Quiz 1: Ch. 1, Due Oct. 11</a></li></p>-->
 				<h2>Quiz Solutions</h2>
@@ -61,6 +61,7 @@
 				<p><li><a href="AvgInstRoCSols.pdf">Quiz 2: Average and Instantaneous Rate of Change</a></li></p>
 				<p><li><a href="GradeThisDerivativeQuizSols.pdf">Quiz 3: Grade This Derivative Quiz</a></li></p>
 				<p><li>Quiz 4: Attendance Quiz</li></p>
+				<p><li><a href="Sum18Quiz5Sols.pdf">Quiz 5: Riemann Sums</a></li></p>
 				<!--<p><li><a href="Quiz3Sols.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
 				<p><li><a href="takeHome1Sols.pdf">Take-Home Quiz 1 Solutions</a></li></p>
 				<p><li><a href="quiz5Sols.pdf">Quiz 5</a></li></p>
