--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -69,7 +69,7 @@
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions by Hand</a></li></p>
 				<p><li><a href="uSubPracticeSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="PracticeExam3Sols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice (Second version)</a></li></p>
-				<!--<p><li><a href="BingoSols.pdf">Final Exam Bingo (Solutions - not in order!)</a></li></p>-->
+				<!--<p><li><a href="BingoSols.pdf">Final Exam Bingo</a></li></p>-->
 				
 			</div>
 		</div>
@@ -94,6 +94,7 @@
 				<p><li><a href="Ch561to3Practice.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
 				<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
 				<p><li><a href="PracticeExam3.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice (Second version)</a></li></p>
+				<p><li><a href="FinalExamBingoQuestions.pdf">Final Exam Bingo</a></li></p>
 			</div>
 		</div>
 
