--- a/courses/122/Summer18/Exams.html
+++ b/courses/122/Summer18/Exams.html
@@ -55,11 +55,11 @@
 				<h2>Blank Exams</h2>
 				<p><li><a href="Sum18Exam1.pdf">Exam 1 (Chapter 1)</a></li></p>
 				<p><li><a href="Sum18Exam2.pdf">Exam 2 (Chapters 2-4)</a></li></p>
-				<p><li>Exam 3 (Chapters 5-6)</a></li></p>
+				<p><li><a href="Sum18Exam3.pdf">Exam 3 (Chapters 5-6)</a></li></p>
 				<h2>Exam Solutions</h2>
 				<p><li><a href="Sum18Exam1Sols.pdf">Exam 1 Version A (Chapter 1) Sols</a></li></p>	
 				<p><li><a href="Sum18Exam2Sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>
-				<!--<p><li><a href="122exam3sols.pdf">Exam 3 (Chapters 5-6) Sols</a></li></p>-->
+				<p><li><a href="Sum18Exam3Sols.pdf">Exam 3 (Chapters 5-6)</a></li></p>
 			</div>
 		</div>
 
