--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 			<div class="inner">
 				<h3>Address</h3>
 				<p>Department of Mathematics<br/>
-				University of South Carolina<br/>
-				LeConte College<br/>
-				1523 Greene St.<br/>
-				Columbia, SC 29208</p>
+				Lafayette College<br/>
+				221 Pardee Hall<br/>
+				1 Pardee Dr.<br/>
+				Easton, PA 18042<br/>
 			</div>
 		</div>
 
