--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<ul class="toplinks_links">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="teaching.html">Teaching</a></li>
-			<li><a href="CVAClifton.pdf">CV</a></li>
+			<li><a href="CV-AClifton.pdf">CV</a></li>
 			<li><a href="studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
@@ -52,7 +52,7 @@
 
 	<div id="content" class="clearfix shadow">
 		<h2>About</h2>
-		<p>I am a full time instructor at the University of South Carolina.  My academic interests
+		<p>I am a part time instructor at Lafayette College.  My academic interests
 		include graph theory (in particular, the packing chromatic number, Ramsey theory, and domination) and mathematics education.
 		Other interests include hiking, backpacking, fishing, cooking, spending time with my husband, and playing with our dog, Emmy.
 		 </p>
@@ -73,8 +73,8 @@
 		<div id="trio2">
 			<div class="inner">
 				<h3>Office Hours</h3>
-				<p>Spring 2018<br/>
-				Monday, Tuesday, Wednesday 2:30-3:30pm<br/>
+				<p>Spring 2019<br/>
+				Monday, Wednesday, Friday 10:30-12:00pm<br/>
 				Also by appointment.</p>
 			</div>
 		</div>
@@ -82,8 +82,8 @@
 		<div id="trio3">
 			<div class="inner">
 				<h3>Contact</h3>
-				<p>Office: LeConte 400G<br/>
-				Email: aclifton@math.sc.edu</p>
+				<p>Office: Pardee 221<br/>
+				Email: cliftona@lafayette.edu</p>
 			</div>
 		</div>
 	</div>
