--- a/teaching.html
+++ b/teaching.html
@@ -18,7 +18,7 @@
 		<ul class="toplinks_links">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="teaching.html">Teaching</a></li>
-			<li><a href="CVAClifton.pdf">CV</a></li>
+			<li><a href="CV-AClifton.pdf">CV</a></li>
 			<li><a href="studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
@@ -59,12 +59,12 @@
 		of your selected layout wrapper.</p>-->
 		
 		<h3>Current Courses</h3>
-		<p><ul>
-	    <li><a href="courses/122/Summer18/teaching.html">Math 122 Summer II 2018</a></li>
-	  </ul></p>
+		<p>Math 141 Spring 2019</p>
+		<p>Math 186 Spring 2019</p>
 		<h2>Past Courses</h2>
 		<h3>University of South Carolina</h3>
-		<p>Math 141 Spring 18</p>
+		<li><a href="courses/122/Summer18/teaching.html">Math 122 Summer II 2018</a></li>
+		<li><a href="courses/141/Spring18/teaching.html">Math 141 Spring 18</a></li>
 		<p>Math 142 Spring 2018</p>
 		<p>Math 122 Fall 17</p>
 		<p>Math 141 Fall 17</p>
