--- a/courses/122/Summer18/teaching.html
+++ b/courses/122/Summer18/teaching.html
@@ -29,7 +29,7 @@
 		<ul class="toplinks_links">
 			<li><a href="../../../index.html">Home</a></li>
 			<li><a href="../../../teaching.html">Teaching</a></li>
-			<li><a href="../../../CVAClifton.pdf">CV</a></li>
+			<li><a href="../../../CV-AClifton.pdf">CV</a></li>
 			<li><a href="../../../studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
