--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<li><a href="teaching.html">Teaching</a></li>
 			<li><a href="CV-AClifton.pdf">CV</a></li>
 			<li><a href="studentresources.html">Student Resources</a></li>
+			<li><a href="Exam2.pdf">140Exam2</a></li>
 		</ul>
 	</div>
 
